--- a/onlyhtml.html
+++ b/onlyhtml.html
@@ -16,11 +16,14 @@
 h1 {text-align: center;}
 p {text-align: center;}
 div {text-align: center;}
-.button1 {background-color: #ab125e;
+.button1 {background-color: #ab125e; 
     text-align: center; }/* Green */
-.button2 {background-color: #ba5700;
     
-text-align: center;} /* Blue */
+    .button2 {background-color: #ba5700; 
+    text-align: center;} 
+
+    .button3 {background-color: #f40732;  
+    text-align: center;} /* Red */
 </style>
 </head>
     <body>
@@ -35,6 +38,7 @@ text-align: center;} /* Blue */
 
                 <button class="button button1">Green</button>
                 <button class="button button2">Blue</button>
+                <button class="button button3">Red</button>
         </div>
     </body>
 </html>
