--- a/index.html
+++ b/index.html
@@ -1,32 +1,15 @@
 <!DOCTYPE html>
-<html>
-    <head>
-    <title>Css Concept</title>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <Link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <style>
-            #nav_bar{
-                font-size: 25px;
-                font-weight: bold; 
-            }
-        </style>
-    </head>
-    <body> 
-        <header>
-            <div class="header_section"> 
-            <strong> 
-            </strong>
-            </div>
-        </header>
-<br>
-<nav id="nav_bar" >
-<a href="Home.html" target="myframe">Home</a>
-<a href="Home.html" target="myframe">Teacher Stack</a>
-<a href="Home.html" target="myframe">Project</a>
-<a href="Home.html" target="myframe">Education</a>
-<a href="Home.html" target="myframe">Hobbies</a>
-</nav>
-
-
-
-    </body>
+    <title>Document</title>
+        
+</head>
+<body>
+    <script src="interfaceAssignment.js"> 
+    </script>
+</body>
 </html>
